--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
     "instagram" : "https://chat.whatsapp.com/KosmbTPMlB2DvXh1R93ns0",
     "botName": "「𝙳𝚒𝚝‘𝚣_𝙱𝚘𝚝」",
     "footer": "-`𝒜𝒹𝒾𝓉𝓎𝒶 ℛℯ𝒻𝒶𝓃𝒹𝒾´-",
-    "sessionName": "session",
+    "sessionName": "shando",
     "pathimg": "./media/Haruka.jpg",
     "BotKey": "Gsyt6jRJ",
     "auto_welcomeMsg": true,
