--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-    "ownerNumber": ["6282244877433@s.whatsapp.net","6282244877433@s.whatsapp.net","6282244877433@s.whatsapp.net"],
-    "ownerName": "ʚ𝒜𝒹𝒾𝓉𝓎𝒶 ℛℯ𝒻𝒶𝓃𝒹𝒾ɞ",
+    "ownerNumber": ["6282225967055@s.whatsapp.net","6282244877433@s.whatsapp.net","6282244877433@s.whatsapp.net"],
+    "ownerName": "ʚɢᴇᴀᴛsɞ",
     "instagram" : "https://chat.whatsapp.com/KosmbTPMlB2DvXh1R93ns0",
-    "botName": "「𝙳𝚒𝚝‘𝚣_𝙱𝚘𝚝」",
-    "footer": "-`𝒜𝒹𝒾𝓉𝓎𝒶 ℛℯ𝒻𝒶𝓃𝒹𝒾´-",
-    "sessionName": "shando",
+    "botName": "「ɢᴇᴀᴛs」",
+    "footer": "-`ʚɢᴇᴀᴛsɞ´-",
+    "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
     "BotKey": "Gsyt6jRJ",
     "auto_welcomeMsg": true,
